<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2013 Alex Curran
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact"
        style="@style/Text.Title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/espiandevdrop"
        android:contentDescription="@string/cd_developer_logo"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"
        style="@style/Text"
        android:layout_gravity="center_horizontal"
        android:textColor="#a6a6a6"
        android:textSize="24sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:id="@+id/contact_spiel"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:padding="8dp"
        android:layout_marginTop="8dp" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:divider="@drawable/divider_vertical_bright"
        android:showDividers="middle"
        android:dividerPadding="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="copyEmail"
            android:background="@drawable/selectable_background"
            android:paddingLeft="8dp"
            android:dividerPadding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="alexc@espiandev.co.uk"
                style="@android:style/TextAppearance.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:id="@+id/textView1"
                android:textAllCaps="true"
                android:textStyle="bold"
                style="@style/Text.SmallTitle"
                android:layout_marginBottom="0dp"
                android:paddingBottom="0dp" />
        </LinearLayout>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_email"
            android:contentDescription="@string/cd_email"
            android:background="@drawable/selectable_background"
            android:onClick="email" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:divider="@drawable/divider_vertical_bright"
        android:showDividers="middle"
        android:dividerPadding="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="copyWebsite"
            android:background="@drawable/selectable_background"
            android:paddingLeft="8dp"
            android:dividerPadding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="www.espiandev.co.uk"
                style="@android:style/TextAppearance.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Website"
                android:textAllCaps="true"
                android:textStyle="bold"
                style="@style/Text.SmallTitle"
                android:layout_marginBottom="0dp"
                android:paddingBottom="0dp" />
        </LinearLayout>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_contact_site"
            android:contentDescription="@string/cd_email"
            android:background="@drawable/selectable_background"
            android:onClick="website" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:divider="@drawable/divider_vertical_bright"
        android:showDividers="middle"
        android:paddingLeft="0dp"
        android:dividerPadding="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="copyGPlus"
            android:background="@drawable/selectable_background"
            android:paddingLeft="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+Alex Curran"
                style="@android:style/TextAppearance.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Google+"
                android:textAllCaps="true"
                android:textStyle="bold"
                style="@style/Text.SmallTitle"
                android:layout_marginBottom="0dp"
                android:paddingBottom="0dp" />
        </LinearLayout>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_gplus"
            android:background="@drawable/selectable_background"
            android:contentDescription="@string/cd_googleplus"
            android:onClick="gPlus" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:divider="@drawable/divider_vertical_bright"
        android:showDividers="middle"
        android:dividerPadding="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="copyTwitter"
            android:background="@drawable/selectable_background"
            android:paddingLeft="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/espiandev"
                style="@android:style/TextAppearance.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Twitter"
                android:textAllCaps="true"
                android:textStyle="bold"
                style="@style/Text.SmallTitle"
                android:layout_marginBottom="0dp"
                android:paddingBottom="0dp" />
        </LinearLayout>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="@drawable/selectable_background"
            android:onClick="twitter"
            android:contentDescription="@string/cd_twitter"
            android:src="@drawable/ic_action_twitter" />
    </LinearLayout>
</LinearLayout>